photo gallery widget copied down for refactoring

--- a/dev/styles.css
+++ b/dev/styles.css
@@ -2,43 +2,43 @@
 
 /** Hide only visually, but have it available for screenreaders: h5bp.com/v **/
 .visuallyhidden {
-	border: 0;
-	clip: rect(0 0 0 0);
-	height: 1px;
-	margin: -1px;
-	overflow: hidden;
-	padding: 0;
-	position: absolute;
-	width: 1px;
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
 }
 /* Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard: h5bp.com/p */
 .visuallyhidden.focusable:active, .visuallyhidden.focusable:focus {
-	clip: auto;
-	height: auto;
-	margin: 0;
-	overflow: visible;
-	position: static;
-	width: auto;
+  clip: auto;
+  height: auto;
+  margin: 0;
+  overflow: visible;
+  position: static;
+  width: auto;
 }
 .clearfix:before, .clearfix:after {
-	content: "";
-	display: table;
+  content: "";
+  display: table;
 }
 .clearfix:after {
-	clear: both;
+  clear: both;
 }
 .clearfix {
 *zoom: 1;
 }
 #contentRow:before, #contentRow:after {
-	content: "";
-	display: table;
+  content: "";
+  display: table;
 }
 #contentRow:after {
-	clear: both;
+  clear: both;
 }
 #contentRow {
-*zoom: 1;
+  *zoom: 1;
 }
 
 
@@ -46,134 +46,144 @@
 
 /* Hide this menu item in site-actions. Per requirements.*/
 #univ-intranet-seattle #zz10_MenuItem_ChangeTheLook, #univ-intranet-seattle #zz11_MenuItem_ChangeTheLook {
-	display: none;
+  display: none;
 }
 
 #univ-intranet-seattle #RibbonContainer .ms-cui-topBar2 .ms-cui-tts {
-	margin-left: 6em;
+  margin-left: 6em;
 }
 
 #univ-intranet-seattle #s4-ribbonrow, body#univ-intranet-seattle #mysite-ribbonrow {
-    display: block;
+  display: block;
 }
 
 /** MySite Specific **/
 
 /*** Site icon ***/
 body.univ-intranet-mysite #contentRow {
-    padding-top: 0;
+  padding-top: 0;
 }
 
 #univ-intranet-seattle #mysite-titlerow, #univ-intranet-seattle #s4-titlerow.ms-mysite-titlerow {
-    margin-left: 0;
+  margin-left: 0;
 }
 
 /*** CTA menu ***/
 
 #univ-intranet-seattle.univ-intranet-mysite .ctaBox {
-	margin-top: 1em;
+  margin-top: 1em;
 }
 #univ-intranet-seattle.univ-intranet-mysite .ctaBox ul {
-	padding-top: 0;
-	margin-top: 0;
+  padding-top: 0;
+  margin-top: 0;
 }
 #univ-intranet-seattle.univ-intranet-mysite .ctaBox li {
-	padding-top: .5em;
+  padding-top: .5em;
 }
 
 /* Custom Design */
 /** Header **/
 
 #univ-intranet-seattle .ms-core-suiteLink-a:hover {
-	background-color: #000;
+  background-color: #000;
 }
 /*** Powershell injected SuiteBar root intranet menu ***/
 #univ-intranet-seattle .logo {
-	position: absolute;
-	left: 0;
-	top: 0;
-	margin: .65em .9em;
-	z-index: 9999;
+  position: absolute;
+  left: 0;
+  top: 0;
+  margin: .65em .9em;
+  z-index: 9999;
 }
 #univ-intranet-seattle .WrapHomeRootMenu {
-	float: right;
+  float: right;
 }
 #univ-intranet-seattle #DeltaSuiteLinks {
-	width: 15%;
+  width: 15%;
 }
 /*** Search ***/
 
 #univ-intranet-seattle #ctl00_PlaceHolderSearchArea_SmallSearchInputBox1_csr_sbox, .ms-srch-sb > input {
-	margin-top: 2px;
-	text-transform: lowercase;
+  margin-top: 2px;
+  text-transform: lowercase;
 }
 #univ-intranet-seattle #searchInputBox #SearchBox a.ms-srch-sb-navLink {
-	display: none;
+  display: none;
 }
 /**** Search Center ****/
 #univ-intranet-seattle .ms-srchnav-list li.ms-srchnav-item {
-	border-bottom: 5px solid #4c4c4c;
+  border-bottom: 5px solid #4c4c4c;
 }
 #univ-intranet-seattle .ms-srchnav-list .ms-srchnav-item h2 a {
-	display: inline-block;
-	margin-top: 2em;
-	padding: .5em;
+  display: inline-block;
+  margin-top: 2em;
+  padding: .5em;
 }
 #univ-intranet-seattle .ms-srchnav-link-selected:link {
-	background-color: #4c4c4c;
-	color: #fff;
+  background-color: #4c4c4c;
+  color: #fff;
 }
 /*** Global Menu ***/
 .ms-core-listMenu-item:hover {
-	color: #003366;
+  color: #003366;
 }
-nav #DeltaTopNavigation .root .dynamic-children .dynamic {
-	padding-top: .3em !important;
-}
+
 /*** Drop-down select menu ***/
 
 .WrapHomeRootMenu {
-	width: 221px;
-	height: 21px;
-	overflow: hidden;
-	border: 1px solid #222;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-	font-weight: bold;
+  width: 221px;
+  height: 21px;
+  overflow: hidden;
+  border: 1px solid #222;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  font-weight: bold;
 }
 select#homeRootMenu {
-	background: #424242 url(/_layouts/15/images/univ-intranet/dropArrow.png) no-repeat 195px -2px;
-	border: 0 solid #000000;
-	color: #F0F0F0;
-	font-size: 13px;
-	margin: 8px 0 0 0;
-	padding: 2px 0 0 9px;
-	width: 250px;
-	margin-top: 1px;
-	/*font-family:"MuliRegular";*/
-	font-weight: 100;
+  background: #424242 url(/_layouts/15/images/univ-intranet/dropArrow.png) no-repeat 195px -2px;
+  border: 0 solid #000000;
+  color: #F0F0F0;
+  font-size: 13px;
+  margin: 8px 0 0 0;
+  padding: 2px 0 0 9px;
+  width: 250px;
+  margin-top: 1px;
+  /*font-family:"MuliRegular";*/
+  font-weight: 100;
 }
+
 /** Global Vav **/
 #DeltaTopNavigation .dynamic-children .dynamic {
-	list-style-type: none;
+  list-style-type: none;
 }
+
+#DeltaTopNavigation .dynamic-children .dynamic a {
+  display: block;
+  padding: .85rem;
+}
+
+#DeltaTopNavigation .dynamic-children .dynamic a:hover {
+  background: #cfb87c;
+}
+
 #DeltaTopNavigation .dynamic-children ul.dynamic {
-	background-color: #d9d9d9;
-	border: none;
-	box-shadow: none;
+  background-color: #d9d9d9;
+  border: none;
+  box-shadow: none;
+  width: 225px !important;
 }
 
 /** suite bar color override -- a special filter is applied by SP for ie8, turning the suite bar transparent. This is a bug **/
 #univ-intranet-seattle .ms-core-needIEFilter #suiteBarLeft {
-	background-color: #464646;
+  background-color: #464646;
 }
 
 #univ-intranet-seattle #suiteBarLeft {
-	background-color: #464646;
+  background-color: #464646;
 }
 
 #univ-intranet-seattle #suiteBarRight {
-	background-color: #000;
+  background-color: #000;
 }
 
 
@@ -183,9 +193,20 @@ select#homeRootMenu {
                Custom SharePoint Overrides
 
 **********************************************************/
-
 .ms-core-overlay {
   background-color: #fff;
+}
+
+.ms-core-listMenu-horizontalBox li.static>a {
+  display: none !important;
+}
+
+.ms-WPBorderBorderOnly {
+  border: 0;
+}
+
+.tableCol-50 {
+  vertical-align: top;
 }
 
 
