--- a/dev/styles.css
+++ b/dev/styles.css
@@ -1,4 +1,55 @@
 /* Utility */
+* {
+  font-family: Tahoma, Helvetica, Arial, sans-serif;
+}
+
+body, 
+.ms-core-overlay {
+  background-color: #fff;
+}
+
+h1,
+.ms-core-pageTitle, 
+#DeltaPlaceHolderPageTitleInTitleArea {
+  font-family: "Segoe UI Light","Segoe UI Light","Segoe UI","Segoe",Tahoma,Helvetica,Arial,sans-serif;
+}
+
+h2, 
+h3, 
+.ms-h2, 
+.ms-headerFont {
+  font-family: MuliRegular, Helvetica, Arial, sans-serif !important;
+}
+
+h2,
+h3 {
+  margin-bottom: 1rem;
+}
+
+h2,
+h2.ms-rteElemnet-H2,
+.ms-rtestate-field h2 {
+  color: #565a5c;
+  font-weight: bold;
+}
+
+h3 {
+  color: #531111;
+  line-height: 120%;
+}
+
+section {
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+
+section:last-child {
+  margin-bottom: 0;
+}
+
+section:first-child {
+  margin-top: 0;
+}
 
 /** Hide only visually, but have it available for screenreaders: h5bp.com/v **/
 .visuallyhidden {
@@ -207,8 +258,11 @@ select#homeRootMenu {
   cursor: pointer;
 }
 
-.ms-core-overlay {
-  background-color: #fff;
+li.static:focus,
+li.static span:focus,
+.menu-item:focus,
+.menu-item-text:focus {
+  outline: none;
 }
 
 .ms-core-listMenu-horizontalBox li.static>a {
