content box max-width added

--- a/dev/styles.css
+++ b/dev/styles.css
@@ -9,6 +9,7 @@ body,
 }
 
 h1,
+header h1>div,
 .ms-core-pageTitle, 
 #DeltaPlaceHolderPageTitleInTitleArea {
   font-family: "Segoe UI Light","Segoe UI Light","Segoe UI","Segoe",Tahoma,Helvetica,Arial,sans-serif;
@@ -91,6 +92,7 @@ section:last-child {
 
 #contentBox {
   margin-left: 280px;
+  max-width: 1280px;
 }
 
 #contentRow:before, #contentRow:after {
@@ -321,7 +323,7 @@ li.ms-navedit-editArea {
   vertical-align: top;
 }
 
-#pageTitle {
+.ms-core-pageTitle {
   margin-bottom: 2rem;
 }
 
