--- a/dev/styles.css
+++ b/dev/styles.css
@@ -71,6 +71,26 @@ section {
   display: none;
 }
 
+.print-accordion {
+  background: #000;
+  border: 0;
+  border-radius: 4px; 
+  color: #fff;
+  display: inline-block;
+  font-size: 1rem;
+  text-align: center;
+}
+
+.print-accordion:focus {
+  outline: none;
+}
+
+.print-accordion:hover{
+  cursor: pointer;
+  background: #000;
+  color: #cfb87c;
+}
+
 #contentBox {
   margin-left: 280px;
   max-width: 1280px;
@@ -574,4 +594,21 @@ li.ms-navedit-editArea {
 
 .padding-x-small {
   padding: 1rem;
+}
+
+
+
+/**********************************************************
+    
+                    Media Queries
+
+**********************************************************/
+
+/******************** Print Media Query ********************/
+@media print {
+  
+  .print-accordion {
+    display: none;
+  }
+  
 }
