--- a/dev/accordion-widget/accordion-styles.css
+++ b/dev/accordion-widget/accordion-styles.css
@@ -13,6 +13,10 @@
   padding: 1.25rem;
 }
 
+.accordion-content h3 {
+  color: #565a5c;
+}
+
 .accordion-header {
   border: 1px solid #ddd;
   border-radius: 4px;
