--- a/dev/quick-links/quick-link-styles.css
+++ b/dev/quick-links/quick-link-styles.css
@@ -57,3 +57,9 @@
 .quick-link-content .quick-link-blurb {
   padding-top: 15px;
 }
+
+.quick-link-header,
+.quick-link-blurb {
+  font-size: 1em !important;
+  line-height: normal !important;
+}
