--- a/dev/styles.css
+++ b/dev/styles.css
@@ -6,6 +6,7 @@ a.button,
   color: #fff;
   display: inline-block;
   font-size: 1rem;
+  margin: 0;
   padding: .5rem;
   text-align: center;
   text-decoration: none;
@@ -17,6 +18,10 @@ a.button:hover,
   color: #cfb87c;
   cursor: pointer;
   text-decoration: none;
+}
+
+.print-accordion:focus {
+  outline: none;
 }
 
 body, 
@@ -96,9 +101,25 @@ ul.no-bullets {
   display: none;
 }
 
-.print-accordion:focus {
-  outline: none;
+.home-page-image {
+  background-image: url("/PublishingImages/ed2-north-exterior.jpg");
 }
+
+.home-page-image,
+.home-page-image h2{
+  color: #fff;
+  letter-spacing: 1px;
+  text-shadow:
+    -1px -1px 0 #000, 
+    1px -1px 0 #000, 
+    -1px 1px 0 #000, 
+    1px 1px 0 #000;
+}
+
+.home-page-image strong {
+  color: #cfb87c;
+}
+
 
 
 
@@ -322,6 +343,65 @@ li.ms-navedit-editArea {
 
 #Ribbon\.EditingTools\.CPEditTab\.Font-Large-0-1 {
   margin-top: 38px !important; 
+}
+
+
+
+/**********************************************************
+    
+              Calendar Overlay Colors
+
+**********************************************************/
+
+/**** Default Panel ****/
+
+.ms-acal-apanel-item,
+.ms-acal-item {
+  background-color: #cfb87c;
+}
+
+.ms-acal-apanel-item span,
+.ms-acal-mdiv,
+.ms-acal-mdiv a,
+.ms-acal-sdiv,
+.ms-acal-sdiv a {
+  color: #000 !important;
+}
+
+/**** Panel 1 ****/
+.ms-acal-color1,
+.ms-acal-apanel-item.ms-acal-apanel-color1 {
+  background-color: #b288b9;
+}
+
+/**** Panel 2 ****/
+.ms-acal-color2,
+.ms-acal-apanel-item.ms-acal-apanel-color2 {
+  background-color: #89abe3;
+}
+
+/**** Panel 3 ****/
+.ms-acal-color3,
+.ms-acal-apanel-item.ms-acal-apanel-color3 {
+  background-color: #6bbbae;
+}
+
+/**** Panel 4 ****/
+.ms-acal-color4,
+.ms-acal-apanel-item.ms-acal-apanel-color4 {
+  background-color: #71cc98;
+}
+
+/**** Panel 5 ****/
+.ms-acal-color5,
+.ms-acal-apanel-item.ms-acal-apanel-color5 {
+  background-color: #9ea700;
+}
+
+/**** Panel 6 ****/
+.ms-acal-color6,
+.ms-acal-apanel-item.ms-acal-apanel-color6 {
+  background-color: #e8927c;
 }
 
 
